--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
     API_BASE: "https://scankey-gateway-2apb4vvlhq-no.a.run.app"
   };
 </script>
+<script>
+  const API_BASE = (globalThis.__SCN_CONFIG__?.API_BASE || "https://scankey-gateway-2apb4vvlhq-no.a.run.app").replace(/\/+$/, "");
+  const apiUrl = (p) => `${API_BASE}${p.startsWith("/") ? "" : "/"}${p}`;
+</script>
+
 
 <script>
     const el = document.getElementById("status");
